--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-﻿<DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title>我的前端库</title>
 		<style type="text/css">
+		/*reset.css*/	html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
+			html{
+				height:100%;
+			}
 			body{
-				font-size:12px;
+				height:100%;
+				font-size:14px;
 				font-family: "Microsoft Yahei",Arial,Helvetica;
+				background: #f1f4f9;
 				color:#333;
 			}
 			button,input{
@@ -19,19 +25,33 @@
 			a:hover{
 				text-decoration:underline;
 			}
+			.wraper{
+				position:relative;
+				min-height:100%;
+			}
 			.header{
+				height:45px;
 				margin-bottom:15px;
+				background: #0099cc;
+			}
+			.header .hd-box,.footer .ft-box{
+				width:1200px;
+				margin:0 auto;
+				line-height:45px;
+				color:#fff;
 			}
 			.header h1{
-				text-align:center;
-			}
-			.wraper{
-				width:960px;
-				margin:0 auto;
-				font-size:14px;
+				font-size:20px;
+				font-weight:bold;
 			}
 			.container{
-				margin-bottom:30px;
+				width:1200px;
+				padding-bottom:120px;
+				margin:0 auto;
+			}
+			.content{
+				padding:20px;
+				background:#fff;
 				overflow:hidden;
 			}
 			.group{
@@ -40,59 +60,74 @@
 				padding:10px 0;
 				border-bottom:1px dashed #ccc;
 			}
+			.group:last-child{
+				border-bottom:none;
+			}
 			.group h2{
+				margin-bottom:12px;
 				font-size:18px;
 			}
 			.group li{
+				padding-left:15px;
 				line-height:22px;
 			}
 			.footer{
+				position:absolute;
+				bottom:0;
+				width:100%;
+				height:70px;
 				padding-top:20px;
-				color:#999;
+				background: #0099cc;
 			}
 			.footer a{
-				color:#999;
+				color:#fff;
 			}
 		</style>
 	</head>
 	<body>
 		<div class="wraper">
 			<div class="header">
-				<h1>我的前端库</h1>
+				<div class="hd-box">
+					<h1>我的前端库</h1>
+				</div>
 			</div>
 			<div class="container">
-				<div class="group">
-					<h2>游戏</h2>
-					<ul>
-						<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
-					</ul>
-				</div>
-				<div class="group">
-					<h2>算法</h2>
-					<ul>
-						<li><a href="/finder/" target="_blank">最短寻址</a></li>
-						<li><a href="/calc24/" target="_blank">24点计算</a></li>
-					</ul>
-				</div>
-				<div class="group">
-					<h2>工具</h2>
-					<ul>
-						<li><a href="/useragent/" target="_blank">浏览器及设备判断</a></li>
-					</ul>
-				</div>
-				<div class="group">
-					<h2>插件库</h2>
-					<ul>
-						<li><a href="/jquery-slider/" target="_blank">幻灯片</a></li>
-						<li><a href="/jquery-scrollbar/" target="_blank">滚动条</a></li>
-						<li><a href="/jquery-select/" target="_blank">下拉框</a></li>
-						<li><a href="/jquery-range/" target="_blank">滑动条</a></li>
-						<li><a href="/jquery-accordion/" target="_blank">手风琴</a></li>
-					</ul>
+				<div class="content">
+					<div class="group">
+						<h2>游戏</h2>
+						<ul>
+							<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
+						</ul>
+					</div>
+					<div class="group">
+						<h2>算法</h2>
+						<ul>
+							<li><a href="/finder/" target="_blank">最短寻址</a></li>
+							<li><a href="/calc24/" target="_blank">24点计算</a></li>
+						</ul>
+					</div>
+					<div class="group">
+						<h2>工具</h2>
+						<ul>
+							<li><a href="/useragent/" target="_blank">浏览器及设备判断</a></li>
+						</ul>
+					</div>
+					<div class="group">
+						<h2>插件库</h2>
+						<ul>
+							<li><a href="/jquery-slider/" target="_blank">幻灯片</a></li>
+							<li><a href="/jquery-scrollbar/" target="_blank">滚动条</a></li>
+							<li><a href="/jquery-select/" target="_blank">下拉框</a></li>
+							<li><a href="/jquery-range/" target="_blank">滑动条</a></li>
+							<li><a href="/jquery-accordion/" target="_blank">手风琴</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<div class="footer">
-				<p>&copy; <a href="http://passer-by.com" target="_blank">passer-by.com</a></p>
+				<div class="ft-box">
+					<p>&copy; <a href="http://passer-by.com" target="_blank">passer-by.com</a></p>
+				</div>
 			</div>
 		</div>
 	</body>
