--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 				padding-left:15px;
 				line-height:22px;
 			}
+			.group li.hot a{
+				color:#cc0000;
+			}
 			.footer{
 				position:absolute;
 				bottom:0;
@@ -115,7 +118,7 @@
 					<div class="group">
 						<h2>插件库</h2>
 						<ul>
-							<li><a href="/jquery-slider/" target="_blank">幻灯片</a></li>
+							<li class="hot"><a href="/jquery-slider/" target="_blank">幻灯片</a></li>
 							<li><a href="/jquery-scrollbar/" target="_blank">滚动条</a></li>
 							<li><a href="/jquery-select/" target="_blank">下拉框</a></li>
 							<li><a href="/jquery-range/" target="_blank">滑动条</a></li>
