--- a/jquery-plugins/jquery-slider/subject.html
+++ b/jquery-plugins/jquery-slider/subject.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>专题</title>
-		<link rel="stylesheet" type="text/css" href="cssreset-min.css">
+		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<style type="text/css">
 			html,body{
 				height:100%;
@@ -112,8 +112,8 @@
 		}
 	}
 		</style>
-		<script type="text/javascript" src="jquery-1.11.1.min.js"></script>
-		<script type="text/javascript" src="jquery.slider.js"></script>
+		<script type="text/javascript" src="../public/jquery.min.js"></script>
+		<script type="text/javascript" src="../code/jquery.slider.js"></script>
 	</head>
 	<body>
 		<div class="slider">
