--- a/jquery-plugins/jquery-scrollbar/index.html
+++ b/jquery-plugins/jquery-scrollbar/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>scrollbar</title>
-		<link rel="stylesheet" type="text/css" href="cssreset-min.css">
+		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
 		<style type="text/css">
 			body{
 				font-family: "Microsoft Yahei",Arial,Helvetica;
@@ -128,8 +128,8 @@
 				text-align: left;
 			}
 		</style>
-		<script type="text/javascript" src="jquery-1.11.1.min.js"></script>
-		<script type="text/javascript" src="jquery.scrollbar.js"></script>
+		<script type="text/javascript" src="../public/jquery.min.js"></script>
+		<script type="text/javascript" src="../code/jquery.scrollbar.js"></script>
 	</head>
 	<body>
 		<div class="main">
