--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
 						</ul>
 					</div>
 					<div class="group">
-						<h2>插件库</h2>
+						<h2>组件库</h2>
 						<ul>
 							<li class="hot"><a href="/jquery-plugins/jquery-slider/" target="_blank">幻灯片</a></li>
-							<li><a href="/jquery-plugins/jquery-scrollbar/" target="_blank">滚动条</a></li>
-							<li><a href="/jquery-plugins/jquery-select/" target="_blank">下拉框</a></li>
-							<li><a href="/jquery-plugins/jquery-range/" target="_blank">滑动条</a></li>
-							<li><a href="/jquery-plugins/jquery-accordion/" target="_blank">手风琴</a></li>
+							<li><a href="/widget/jquery-scrollbar/" target="_blank">滚动条</a></li>
+							<li><a href="/widget/jquery-select/" target="_blank">下拉框</a></li>
+							<li><a href="/widget/jquery-range/" target="_blank">滑动条</a></li>
+							<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
 						</ul>
 					</div>
 				</div>
