--- a/widget/jquery-slider/subject.html
+++ b/widget/jquery-slider/subject.html
@@ -24,10 +24,10 @@
 				background:#ccc;
 			}
 			.slider .page2{
-				background:#ccc;
+				background:#c66;
 			}
 			.slider .page3{
-				background:#ccc;
+				background:#66c;
 			}
 			.slider .nav{
 				position:absolute;
@@ -119,13 +119,22 @@
 		<div class="slider">
 			<div class="content">
 				<div class="page1">
-					<div class="tag1">分页一</div>
+					<div class="tag1">
+						<p>分页一</p>
+						<p>这里是演示，效果怎么样？</p>
+					</div>
 				</div>
 				<div class="page2">
-					<div class="tag1">分页二</div>
+					<div class="tag1">
+						<p>分页二</p>
+						<p>翻滚吧，少年！</p>
+					</div>
 				</div>
 				<div class="page3">
-					<div class="tag1">分页三</div>
+					<div class="tag1">
+						<p>分页三</p>
+						<p>哎呦，不错哦~</p>
+					</div>
 				</div>
 			</div>
 			<ul class="nav">
