--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<div class="group">
 						<h2>组件库</h2>
 						<ul>
-							<li><a class="hot" href="/widget/jquery-slider/" target="_blank">幻灯片</a>、<a href="/widget/jquery-slider/subject.html" target="_blank">全屏滚动</a></li>
+							<li><a class="hot" href="/widget/jquery-slider/" target="_blank">幻灯片</a>（<a href="/widget/jquery-slider/subject.html" target="_blank">全屏滚动</a>）</li>
 							<li><a href="/widget/jquery-scrollbar/" target="_blank">滚动条</a></li>
 							<li><a href="/widget/jquery-select/" target="_blank">下拉框</a></li>
 							<li><a href="/widget/jquery-range/" target="_blank">滑动条</a></li>
