--- a/widget/jquery-accordion/index.html
+++ b/widget/jquery-accordion/index.html
@@ -4,14 +4,8 @@
 		<meta charset="utf-8">
 		<title>accordion</title>
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
+		<link rel="stylesheet" type="text/css" href="../public/common.css">
 		<style type="text/css">
-			body{
-				font-family: "Microsoft Yahei",Arial,Helvetica;
-			}
-			.main{
-				width:960px;
-				margin: 50px auto 0;
-			}
 			.accordion{
 				width:400px;
 				margin: 0 auto 10px;
