--- a/widget/jquery-range/index.html
+++ b/widget/jquery-range/index.html
@@ -4,20 +4,8 @@
 		<meta charset="utf-8">
 		<title>range</title>
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
-		<style type="text/css">
-			body{
-				font-family: "Microsoft Yahei",Arial,Helvetica;
-			}
-			.main{
-				width:960px;
-				margin: 50px auto 0;
-			}
-			.code {
-				border: 1px dashed #e2e2e2;
-				padding: 10px 5px;
-				margin-bottom: 25px;
-			}
-			
+		<link rel="stylesheet" type="text/css" href="../public/common.css">
+		<style type="text/css">			
 			.panel{
 				margin-bottom:20px;
 			}
@@ -49,9 +37,10 @@
 		<div class="main">
 			<div class="panel">
 				<div class="range" id="range1"></div>
-				<p><input id="input1" type="text" readonly value="移动结束显示"/></p>
+				<p><input id="input1" type="text" readonly value=""/></p>
 			</div>
 			<div class="code">
+				<p>移动结束显示</p>
 				<p>
 				$('#range1').range({<br/>
 					min:0,<br/>
@@ -80,6 +69,7 @@
 				<p><input id="input2" type="text" readonly/></p>
 			</div>
 			<div class="code">
+				<p>移动过程中显示</p>
 				<p>
 				$('#range2').range({<br/>
 					min:10,<br/>
@@ -102,7 +92,89 @@
 						$('#input2').val(status.value);
 					}
 				});
-			</script>			
+			</script>
+			<div class="example">
+				<div class="call">
+					<h1>调用方法：</h1>
+					<p>$(selector).range(options,callback(api));</p>
+				</div>
+				<h2> options参数</h2>
+				<table>
+					<thead>
+						<tr>
+							<th  style="width:150">参数</th>
+							<th  style="width:80">默认值</th>
+							<th>说明</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>valueCls</td>
+							<td>value</td>
+							<td>当前有效值范围显示class</td>
+						</tr>
+						<tr>
+							<td>handleCls</td>
+							<td>handle</td>
+							<td>拖动滑块class</td>
+						</tr>
+						<tr>
+							<td>min</td>
+							<td>0</td>
+							<td>变化范围的最小值</td>
+						</tr>
+						<tr>
+							<td>max</td>
+							<td>100</td>
+							<td>变化范围的最大值</td>
+						</tr>
+						<tr>
+							<td>value</td>
+							<td>1</td>
+							<td>默认显示的值</td>
+						</tr>
+						<tr>
+							<td>step</td>
+							<td>1</td>
+							<td>每次移动的步长</td>
+						</tr>
+						<tr>
+							<td>type</td>
+							<td>'outer'</td>
+							<td>outer进度计算以进度条宽为准，inner进度计算需扣除条滑块宽</td>
+						</tr>
+						<tr>
+							<td>slide</td>
+							<td>function(){}</td>
+							<td>当前值变化时触发的事件，传入对象:event为事件,value为当前值</td>
+						</tr>
+						<tr>
+							<td>change</td>
+							<td>function(){}</td>
+							<td>当前值变化后触发的事件，传入对象:event为事件,value为当前值</td>
+						</tr>
+					</tbody>
+				</table>
+				<h2> callback(api)参数</h2>
+				<table>
+					<thead>
+						<tr>
+							<th  style="width:200">方法</th>
+							<th>说明</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>setValue(value)</td>
+							<td>设置值</td>
+						</tr>
+						<tr>
+							<td>resize()</td>
+							<td>重置尺寸</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</body>
 <html>
