--- a/widget/jquery-select/index.html
+++ b/widget/jquery-select/index.html
@@ -4,20 +4,8 @@
 		<meta charset="utf-8">
 		<title>select</title>
 		<link rel="stylesheet" type="text/css" href="../public/cssreset-min.css">
-		<style type="text/css">
-			body{
-				font-family: "Microsoft Yahei",Arial,Helvetica;
-			}
-			.main{
-				width:960px;
-				margin: 50px auto 0;
-			}
-			.code {
-				border: 1px dashed #e2e2e2;
-				padding: 10px 5px;
-				margin-bottom: 25px;
-			}
-			
+		<link rel="stylesheet" type="text/css" href="../public/common.css">
+		<style type="text/css">	
 			.select{
 				width:180px;
 				margin-bottom:25px;
@@ -50,51 +38,6 @@
 			}
 			.select .list li.active{
 				background:#999;
-			}
-			
-			.example{
-				padding-top:40px;
-				margin-bottom:90px;
-			}
-			.example .call{
-				padding:18px 5px;
-				background:#f0f5f8;
-			}
-			.example h2{
-				padding-top:20px;
-				margin-bottom:7px;
-			}
-			table {
-				width:100%;
-				table-layout:fixed;
-				border-collapse: collapse;
-				border-spacing: 0;
-				border: 1px solid #cee1ee;
-				border-left: 0;
-			}
-			thead {
-				border-bottom: 1px solid #cee1ee;
-				background-color: #e3eef8;
-			}
-			tr {
-				line-height: 24px;
-				font-size: 13px;
-			}
-			tr:nth-child(2n) {
-				background-color: #f0f5f8;
-			}
-			tr th, tr td {
-				border-left: 1px solid #cee1ee;
-				word-break: break-all;
-				word-wrap: break-word;
-				padding-left: 10px;
-				font-weight: normal;
-			}
-			tr th {
-				color: #555;
-				padding-top: 2px;
-				padding-bottom: 2px;
-				text-align: left;
 			}
 		</style>
 		<script type="text/javascript" src="../public/jquery.min.js"></script>
