--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 				margin-bottom:12px;
 				font-size:18px;
 			}
+			.group h2 span{
+				margin-left:7px;
+				font-size:14px;
+			}
 			.group li{
 				padding-left:15px;
 				line-height:22px;
@@ -116,13 +120,19 @@
 						</ul>
 					</div>
 					<div class="group">
-						<h2>组件库</h2>
+						<h2>组件库<span>[jQuery]</span></h2>
 						<ul>
 							<li><a class="hot" href="/widget/jquery-slider/" target="_blank">幻灯片</a>（<a href="/widget/jquery-slider/subject.html" target="_blank">全屏滚动</a>）</li>
 							<li><a href="/widget/jquery-scrollbar/" target="_blank">滚动条</a></li>
 							<li><a href="/widget/jquery-select/" target="_blank">下拉框</a></li>
 							<li><a href="/widget/jquery-range/" target="_blank">滑动条</a></li>
 							<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
+						</ul>
+					</div>
+					<div class="group">
+						<h2>组件库<span>[Zepto]</span></h2>
+						<ul>
+							<li><a href="/widget/zepto-slider/" target="_blank">幻灯片</a></li>
 						</ul>
 					</div>
 				</div>
