--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 							<li><a href="/widget/jquery-scrollbar/" target="_blank">滚动条</a></li>
 							<li><a href="/widget/jquery-select/" target="_blank">下拉框</a></li>
 							<li><a href="/widget/jquery-range/" target="_blank">滑动条</a></li>
+							<li><a href="/widget/jquery-dialog/" target="_blank">对话框</a></li>
 							<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
 						</ul>
 					</div>
