--- a/widget/jquery-slider/index.html
+++ b/widget/jquery-slider/index.html
@@ -297,7 +297,7 @@
 						<tr>
 							<td>triggerType</td>
 							<td>mouse</td>
-							<td>导航触发事件:"mouse"表鼠标移入时触发,"click"表示鼠标点击时触发</td>
+							<td>导航触发事件类型:"mouse"表鼠标移入时触发,"click"表示鼠标点击时触发</td>
 						</tr>
 						<tr>
 							<td>activeIndex</td>
@@ -307,7 +307,7 @@
 						<tr>
 							<td>pointerType</td>
 							<td>'click'</td>
-							<td>左右箭头的触发事件:"mouse"表鼠标移入时触发,"click"表示鼠标点击时触发</td>
+							<td>左右箭头的触发事件类型:"mouse"表鼠标移入时触发,"click"表示鼠标点击时触发</td>
 						</tr>
 						<tr>
 							<td>auto</td>
