--- a/widget/jquery-tabs/index.html
+++ b/widget/jquery-tabs/index.html
@@ -96,7 +96,7 @@
 						<tr>
 							<td>triggerType</td>
 							<td>"mouse"</td>
-							<td>切换时的触发事件类型</td>
+							<td>切换时的触发事件类型:"mouse"表鼠标移入时触发,"click"表示鼠标点击时触发</td>
 						</tr>
 						<tr>
 							<td>triggerCondition</td>
