--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
 							<li><a href="/widget/zepto-slider/" target="_blank">幻灯片</a></li>
 						</ul>
 					</div>
+					<div class="group">
+						<h2>图标库<span>[CSS3]</span></h2>
+						<ul>
+							<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<div class="footer">
