--- a/fancy-icon/index.html
+++ b/fancy-icon/index.html
@@ -72,6 +72,38 @@
 						<i class="fancy-icon icon-download"></i>
 						<span>icon-download</span>
 					</li>
+					<li>
+						<i class="fancy-icon icon-arrow-top"></i>
+						<span>icon-arrow-top</span>
+					</li>
+					<li>
+						<i class="fancy-icon icon-arrow-bottom"></i>
+						<span>icon-arrow-bottom</span>
+					</li>
+					<li>
+						<i class="fancy-icon icon-arrow-left"></i>
+						<span>icon-arrow-left</span>
+					</li>
+					<li>
+						<i class="fancy-icon icon-arrow-right"></i>
+						<span>icon-arrow-right</span>
+					</li>
+					<li>
+						<i class="fancy-icon icon-point-top"></i>
+						<span>icon-point-top</span>
+					</li>
+					<li>
+						<i class="fancy-icon icon-point-bottom"></i>
+						<span>icon-point-bottom</span>
+					</li>
+					<li>
+						<i class="fancy-icon icon-point-left"></i>
+						<span>icon-point-left</span>
+					</li>
+					<li>
+						<i class="fancy-icon icon-point-right"></i>
+						<span>icon-point-right</span>
+					</li>
 				</ul>
 			</div>
 			<div class="desc">
