--- a/widget/jquery-select/index.html
+++ b/widget/jquery-select/index.html
@@ -73,27 +73,27 @@
 					<tbody>
 						<tr>
 							<td>selectCls</td>
-							<td>select</td>
+							<td>'select'</td>
 							<td>选择框外层class</td>
 						</tr>
 						<tr>
 							<td>boxCls</td>
-							<td>box</td>
+							<td>'box'</td>
 							<td>选择框class</td>
 						</tr>
 						<tr>
 							<td>innerCls</td>
-							<td>inner</td>
+							<td>'inner'</td>
 							<td>下拉菜单外层class</td>
 						</tr>
 						<tr>
 							<td>listCls</td>
-							<td>list</td>
+							<td>'list'</td>
 							<td>下拉菜单class</td>
 						</tr>
 						<tr>
 							<td>activeCls</td>
-							<td>active</td>
+							<td>'active'</td>
 							<td>下拉菜单选中class</td>
 						</tr>
 						<tr>
