--- a/widget/jquery-slider/index.html
+++ b/widget/jquery-slider/index.html
@@ -236,37 +236,37 @@
 					<tbody>
 						<tr>
 							<td>contentCls</td>
-							<td>content</td>
+							<td>'content'</td>
 							<td>轮播内容列表的class</td>
 						</tr>
 						<tr>
 							<td>navCls</td>
-							<td>nav</td>
+							<td>'nav'</td>
 							<td>轮播导航列表的class</td>
 						</tr>
 						<tr>
 							<td>prevBtnCls</td>
-							<td>prev</td>
+							<td>'prev'</td>
 							<td>向前一步的class</td>
 						</tr>
 						<tr>
 							<td>nextBtnCls</td>
-							<td>next</td>
+							<td>'next'</td>
 							<td>向后一步的class</td>
 						</tr>
 						<tr>
 							<td>activeTriggerCls</td>
-							<td>active</td>
+							<td>'active'</td>
 							<td>导航选中时的class</td>
 						</tr>
 						<tr>
 							<td>disableBtnCls</td>
-							<td>disable</td>
+							<td>'disable'</td>
 							<td>按键不可用时的class</td>
 						</tr>
 						<tr>
 							<td>hoverCls</td>
-							<td>hover</td>
+							<td>'hover'</td>
 							<td>当鼠标移至相应区域时获得的class</td>
 						</tr>
 						<tr>
@@ -281,7 +281,7 @@
 						</tr>
 						<tr>
 							<td>inEndEffect</td>
-							<td>switch</td>
+							<td>'switch'</td>
 							<td>播放到最后一帧时的效果："switch"表示来回切换,"cycle"表示循环,"none"表示无效果</td>
 						</tr>
 						<tr>
@@ -296,7 +296,7 @@
 						</tr>
 						<tr>
 							<td>triggerType</td>
-							<td>mouse</td>
+							<td>'mouse'</td>
 							<td>导航触发事件类型:"mouse"表鼠标移入时触发,"click"表示鼠标点击时触发</td>
 						</tr>
 						<tr>
