--- a/widget/jquery-tabs/index.html
+++ b/widget/jquery-tabs/index.html
@@ -80,22 +80,22 @@
 					<tbody>
 						<tr>
 							<td>contentCls</td>
-							<td>content</td>
+							<td>'content'</td>
 							<td>内容列表的class</td>
 						</tr>
 						<tr>
 							<td>navCls</td>
-							<td>nav</td>
+							<td>'nav'</td>
 							<td>导航列表的class</td>
 						</tr>
 						<tr>
 							<td>activeCls</td>
-							<td>active</td>
+							<td>'active'</td>
 							<td>导航选中时的class</td>
 						</tr>
 						<tr>
 							<td>triggerType</td>
-							<td>"mouse"</td>
+							<td>'mouse'</td>
 							<td>切换时的触发事件类型:"mouse"表鼠标移入时触发,"click"表示鼠标点击时触发</td>
 						</tr>
 						<tr>
