--- a/widget/jquery-slider/index.html
+++ b/widget/jquery-slider/index.html
@@ -362,7 +362,7 @@
 						<tr>
 							<td>afterEvent(status)</td>
 							<td>(无)</td>
-							<td>移动后执行;传入一个对象,包含：index事件发生前索引,count帧长度,destination方向(prev向前,next向后,数字为相应的索引);</td>
+							<td>移动后执行;传入一个对象,包含：index事件发生前索引,count帧长度</td>
 						</tr>
 					</tbody>
 				</table>
