--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 							<li><a href="/widget/jquery-select/" target="_blank">下拉框</a></li>
 							<li><a href="/widget/jquery-range/" target="_blank">滑动条</a></li>
 							<li><a href="/widget/jquery-dialog/" target="_blank">对话框</a></li>
+							<li><a href="/widget/jquery-countdown/" target="_blank">倒计时</a></li>
 							<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
 						</ul>
 					</div>
