--- a/widget/jquery-slider/subject.html
+++ b/widget/jquery-slider/subject.html
@@ -150,6 +150,7 @@
 					direction: "y",
 					scrollable:true,
 					inEndEffect:'none',
+					keyboardAble:true,
 					afterEvent:function(status){
 						$pages.eq(status.index).addClass('active').siblings().removeClass('active');
 					}
