--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
 							<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
 						</ul>
 					</div>
+					<div class="group">
+						<h2>站点</h2>
+						<ul>
+							<li><a href="http://passerby.cn" target="_blank">随机导航网(passerby.cn)</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<div class="footer">
