--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 		<meta charset="utf-8">
 		<title>我的前端库</title>
 		<style type="text/css">
-		/*reset.css*/	html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
+			html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
 			html{
 				height:100%;
 			}
 			body{
-				height:100%;
+				position: relative;
+				min-height:100%;
 				font-size:14px;
 				font-family: "Microsoft Yahei",Arial,Helvetica;
 				background: #f1f4f9;
@@ -26,8 +27,7 @@
 				text-decoration:underline;
 			}
 			.wraper{
-				position:relative;
-				min-height:100%;
+				height:100%;
 			}
 			.header{
 				height:45px;
@@ -71,9 +71,14 @@
 				margin-left:7px;
 				font-size:14px;
 			}
+			.group ul{
+				overflow: hidden;
+			}
 			.group li{
-				padding-left:15px;
+				float: left;
+				width:50%;
 				line-height:22px;
+				text-indent: 1em;
 			}
 			.group li a.hot{
 				color:#cc0000;
