--- a/index.html
+++ b/index.html
@@ -1,59 +1,14 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
-		<title>我的前端库</title>
+		<title>我的前端库 · web前端开发宝典</title>
+		<meta name="description" content="web开发组件化">
+		<meta name="keywords" content="前端组件,组件库,jQuery插件">
+		<link rel="Bookmark" href="public/img/favicon.ico">
+		<link rel="canonical" href="http://passser-by.com/index.html">
+		<link rel="stylesheet" href="public/css/commont.css">
 		<style type="text/css">
-			html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
-			html{
-				height:100%;
-			}
-			body{
-				position: relative;
-				min-height:100%;
-				font-size:14px;
-				font-family: "Microsoft Yahei",Arial,Helvetica;
-				background: #f1f4f9;
-				color:#333;
-			}
-			button,input{
-				font-family: "Microsoft Yahei",Arial,Helvetica;
-			}
-			a{
-				color:#333;
-				text-decoration:none;
-			}
-			a:hover{
-				text-decoration:underline;
-			}
-			.wraper{
-				height:100%;
-			}
-			.header{
-				height:45px;
-				margin-bottom:15px;
-				background: #0099cc;
-			}
-			.header .box,.footer .box{
-				width:1200px;
-				margin:0 auto;
-				line-height:45px;
-				color:#fff;
-			}
-			.header h1{
-				font-size:20px;
-				font-weight:bold;
-			}
-			.container{
-				width:1200px;
-				padding-bottom:120px;
-				margin:0 auto;
-			}
-			.content{
-				padding:20px;
-				background:#fff;
-				overflow:hidden;
-			}
 			.group{
 				position:relative;
 				bottom:-1px;
@@ -83,34 +38,15 @@
 			.group li a.hot{
 				color:#cc0000;
 			}
-			.footer{
-				position:absolute;
-				bottom:0;
-				width:100%;
-				height:70px;
-				padding-top:20px;
-				background: #0099cc;
-				color:#fff;
-			}
-			.footer a{
-				color:#fff;
-			}
-			.footer .copy{
-				float: left;
-				width:180px;
-			}
-			.footer .info{
-				margin-right: 210px;
-			}
 		</style>
 	</head>
 	<body>
 		<div class="wraper">
-			<div class="header">
+			<header>
 				<div class="box">
 					<h1>我的前端库</h1>
 				</div>
-			</div>
+			</header>
 			<div class="container">
 				<div class="content">
 					<div class="group">
@@ -165,12 +101,12 @@
 					</div>
 				</div>
 			</div>
-			<div class="footer">
+			<footer>
 				<div class="box">
-					<div class="copy">&copy; passer-by.com</div>
+					<div class="copy">Copyright &copy; passer-by.com</div>
 					<div class="info"><a href="http://github.com/mumuy" target="_blank">Github</a></div>
 				</div>
-			</div>
+			</footer>
 		</div>
 	</body>
 </html>
