--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>我的前端库 · web前端开发宝典</title>
 		<meta name="description" content="web开发组件化">
 		<meta name="keywords" content="前端组件,组件库,jQuery插件">
-		<link rel="Bookmark" href="public/img/favicon.ico">
+		<link rel="shortcut icon" href="public/img/favicon.ico">
 		<link rel="canonical" href="http://passser-by.com/index.html">
 		<link rel="stylesheet" href="public/css/commont.css">
 		<style type="text/css">
