--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 							<li><a href="/widget/jquery-dialog/" target="_blank">对话框</a></li>
 							<li><a href="/widget/jquery-countdown/" target="_blank">倒计时</a></li>
 							<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
+							<li><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
 						</ul>
 					</div>
 					<div class="group">
