--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						</ul>
 					</div>
 					<div class="group">
-						<h2>图标库<span>[CSS3]</span></h2>
+						<h2>UI库<span>[CSS]</span></h2>
 						<ul>
 							<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
 						</ul>
