--- a/index.html
+++ b/index.html
@@ -1,77 +1,79 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
-		<title>我的前端库 · web前端开发宝典</title>
+		<title>路人甲 · Passer-by</title>
 		<meta name="description" content="web开发组件化">
-		<meta name="keywords" content="前端组件,组件库,jQuery插件">
-		<link rel="shortcut icon" href="public/img/favicon.ico">
+		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
+		<meta name="author" content="木木阳,mumuy" />
+		<link rel="shortcut icon" href="public/img/favicon.png">
 		<link rel="canonical" href="http://passser-by.com/index.html">
 		<link rel="stylesheet" href="public/css/commont.css">
 		<style type="text/css">
-			.group{
-				position:relative;
-				bottom:-1px;
-				padding:10px 0;
-				border-bottom:1px dashed #ccc;
+			.mod-content .group{
+				margin-bottom: 18px;
 			}
-			.group:last-child{
-				border-bottom:none;
+			.mod-content h3{
+				margin-bottom: 5px;
+				font-size: 16px;
 			}
-			.group h2{
-				margin-bottom:12px;
-				font-size:18px;
-			}
-			.group h2 span{
-				margin-left:7px;
-				font-size:14px;
-			}
-			.group ul{
+			.mod-content ul{
 				overflow: hidden;
 			}
-			.group li{
+			.mod-content li{
 				float: left;
-				width:50%;
-				line-height:22px;
-				text-indent: 1em;
+				width: 40%;
+				height: 20px;
+				line-height: 20px;
 			}
-			.group li a.hot{
-				color:#cc0000;
+			.mod-content a{
+				padding:0 2px;
+			}
+			.mod-content a.hot{
+				color: #cc0000;
+			}
+			.mod-content a:hover{
+				border-bottom: 1px dotted #666;
 			}
 		</style>
 	</head>
 	<body>
-		<div class="wraper">
+		<div class="wrapper">
 			<header>
-				<div class="box">
-					<h1>我的前端库</h1>
+				<div class="mod-head">
+					<h1>Passer-by</h1>
+					<p>一个前端工程师的禅意生活</p>
+				</div>
+				<div class="mod-list">
+					<ul>
+						<li class="active"><a href="/">项目</a></li>
+						<li><a href="/about.html">关于我</a></li>
+						<li><a href="http://github.com/mumuy/" target="_blank">Github</a></li>
+					</ul>
 				</div>
 			</header>
 			<div class="container">
-				<div class="content">
+				<div class="mod-content">
 					<div class="group">
-						<h2>游戏</h2>
-						<ul>
-							<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
-						</ul>
-					</div>
-					<div class="group">
-						<h2>算法</h2>
+						<h3>算法</h3>
 						<ul>
 							<li><a href="/finder/" target="_blank">最短寻址</a></li>
 							<li><a href="/calc24/" target="_blank">24点计算</a></li>
 						</ul>
 					</div>
 					<div class="group">
-						<h2>工具</h2>
+						<h3>工具</h3>
 						<ul>
 							<li><a href="/useragent/" target="_blank">浏览器及设备判断</a></li>
 						</ul>
 					</div>
 					<div class="group">
-						<h2>组件库<span>[jQuery]</span></h2>
+						<h3>组件库<span>[jQuery]</span></h3>
 						<ul>
-							<li><a class="hot" href="/widget/jquery-slider/" target="_blank">幻灯片</a>（<a href="/widget/jquery-slider/subject.html" target="_blank">全屏滚动</a>）</li>
+							<li>
+								<a class="hot" href="/widget/jquery-slider/" target="_blank">幻灯片</a>
+								/<a href="/widget/jquery-slider/subject.html" target="_blank">全屏滚动</a>
+							</li>
 							<li><a href="/widget/jquery-tabs/" target="_blank">标签页</a></li>
 							<li><a href="/widget/jquery-scrollbar/" target="_blank">滚动条</a></li>
 							<li><a href="/widget/jquery-select/" target="_blank">下拉框</a></li>
@@ -83,29 +85,34 @@
 						</ul>
 					</div>
 					<div class="group">
-						<h2>组件库<span>[Zepto]</span></h2>
+						<h3>组件库<span>[Zepto]</span></h3>
 						<ul>
 							<li><a href="/widget/zepto-slider/" target="_blank">幻灯片</a></li>
 						</ul>
 					</div>
 					<div class="group">
-						<h2>UI库<span>[CSS]</span></h2>
+						<h3>UI库<span>[CSS]</span></h3>
 						<ul>
 							<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
 						</ul>
 					</div>
 					<div class="group">
-						<h2>站点</h2>
+						<h3>站点</h3>
 						<ul>
 							<li><a href="http://passerby.cn" target="_blank">随机导航网(passerby.cn)</a></li>
+						</ul>
+					</div>
+					<div class="group">
+						<h3>游戏</h3>
+						<ul>
+							<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<footer>
-				<div class="box">
-					<div class="copy">Copyright &copy; passer-by.com</div>
-					<div class="info"><a href="http://github.com/mumuy" target="_blank">Github</a></div>
+				<div class="mod-foot">
+					<p>Copyright &copy; passer-by.com</p>
 				</div>
 			</footer>
 		</div>
