--- a/about.html
+++ b/about.html
@@ -31,10 +31,12 @@
 				</div>
 			</header>
 			<div class="container">
-				<div class="mod-content">
-					<p>网名：木木阳</p>
-					<p>邮箱：zhenghaole1990@126.com</p>
-					<p>喜欢特立独行，向往简约而不简单的生活，追求以修禅的方式洞察编程……活着就是一种修行！</p>
+				<div class="main">
+					<div class="mod-content">
+						<p>网名：木木阳</p>
+						<p>邮箱：zhenghaole1990@126.com</p>
+						<p>喜欢特立独行，向往简约而不简单的生活，追求以修禅的方式洞察编程……活着就是一种修行！</p>
+					</div>
 				</div>
 			</div>
 			<footer>
