--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 			}
 			.mod-content li{
 				float: left;
-				width: 40%;
+				width: 50%;
 				height: 20px;
 				line-height: 20px;
+				overflow: hidden;
 			}
 			.mod-content a{
 				padding:0 2px;
@@ -53,60 +54,62 @@
 				</div>
 			</header>
 			<div class="container">
-				<div class="mod-content">
-					<div class="group">
-						<h3>算法</h3>
-						<ul>
-							<li><a href="/finder/" target="_blank">最短寻址</a></li>
-							<li><a href="/calc24/" target="_blank">24点计算</a></li>
-						</ul>
-					</div>
-					<div class="group">
-						<h3>工具</h3>
-						<ul>
-							<li><a href="/useragent/" target="_blank">浏览器及设备判断</a></li>
-						</ul>
-					</div>
-					<div class="group">
-						<h3>组件库<span>[jQuery]</span></h3>
-						<ul>
-							<li>
-								<a class="hot" href="/widget/jquery-slider/" target="_blank">幻灯片</a>
-								/<a href="/widget/jquery-slider/subject.html" target="_blank">全屏滚动</a>
-							</li>
-							<li><a href="/widget/jquery-tabs/" target="_blank">标签页</a></li>
-							<li><a href="/widget/jquery-scrollbar/" target="_blank">滚动条</a></li>
-							<li><a href="/widget/jquery-select/" target="_blank">下拉框</a></li>
-							<li><a href="/widget/jquery-range/" target="_blank">滑动条</a></li>
-							<li><a href="/widget/jquery-dialog/" target="_blank">对话框</a></li>
-							<li><a href="/widget/jquery-countdown/" target="_blank">倒计时</a></li>
-							<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
-							<li><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
-						</ul>
-					</div>
-					<div class="group">
-						<h3>组件库<span>[Zepto]</span></h3>
-						<ul>
-							<li><a href="/widget/zepto-slider/" target="_blank">幻灯片</a></li>
-						</ul>
-					</div>
-					<div class="group">
-						<h3>UI库<span>[CSS]</span></h3>
-						<ul>
-							<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
-						</ul>
-					</div>
-					<div class="group">
-						<h3>站点</h3>
-						<ul>
-							<li><a href="http://passerby.cn" target="_blank">随机导航网(passerby.cn)</a></li>
-						</ul>
-					</div>
-					<div class="group">
-						<h3>游戏</h3>
-						<ul>
-							<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
-						</ul>
+				<div class="main">
+					<div class="mod-content">
+						<div class="group">
+							<h3>算法</h3>
+							<ul>
+								<li><a href="/finder/" target="_blank">最短寻址</a></li>
+								<li><a href="/calc24/" target="_blank">24点计算</a></li>
+							</ul>
+						</div>
+						<div class="group">
+							<h3>工具</h3>
+							<ul>
+								<li><a href="/useragent/" target="_blank">浏览器及设备判断</a></li>
+							</ul>
+						</div>
+						<div class="group">
+							<h3>组件库<span>[jQuery]</span></h3>
+							<ul>
+								<li>
+									<a class="hot" href="/widget/jquery-slider/" target="_blank">幻灯片</a>
+									/<a href="/widget/jquery-slider/subject.html" target="_blank">全屏滚动</a>
+								</li>
+								<li><a href="/widget/jquery-tabs/" target="_blank">标签页</a></li>
+								<li><a href="/widget/jquery-scrollbar/" target="_blank">滚动条</a></li>
+								<li><a href="/widget/jquery-select/" target="_blank">下拉框</a></li>
+								<li><a href="/widget/jquery-range/" target="_blank">滑动条</a></li>
+								<li><a href="/widget/jquery-dialog/" target="_blank">对话框</a></li>
+								<li><a href="/widget/jquery-countdown/" target="_blank">倒计时</a></li>
+								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
+								<li><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
+							</ul>
+						</div>
+						<div class="group">
+							<h3>组件库<span>[Zepto]</span></h3>
+							<ul>
+								<li><a href="/widget/zepto-slider/" target="_blank">幻灯片</a></li>
+							</ul>
+						</div>
+						<div class="group">
+							<h3>UI库<span>[CSS]</span></h3>
+							<ul>
+								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
+							</ul>
+						</div>
+						<div class="group">
+							<h3>站点</h3>
+							<ul>
+								<li><a href="http://passerby.cn" target="_blank">随机导航网(passerby.cn)</a></li>
+							</ul>
+						</div>
+						<div class="group">
+							<h3>游戏</h3>
+							<ul>
+								<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
