--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="web开发组件化">
 		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
 		<meta name="author" content="木木阳,mumuy" />
-		<link rel="shortcut icon" href="public/img/favicon.png">
+		<link rel="shortcut icon" href="/public/img/favicon.png">
 		<link rel="canonical" href="http://passser-by.com/index.html">
 		<link rel="stylesheet" href="public/css/commont.css">
 		<style type="text/css">
