--- a/calc24/index.html
+++ b/calc24/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>计算24点</title>
+		<link rel="shortcut icon" href="/public/img/favicon.png">
 		<style type="text/css">
 			body{
 				font-size:12px;
