--- a/finder/index.html
+++ b/finder/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>寻址-最短路径</title>
+		<link rel="shortcut icon" href="/public/img/favicon.png">
 		<style type="text/css">
 			body{
 				font-size:12px;
