--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			</div>
 			<footer>
 				<div class="mod-foot">
-					<p>Copyright &copy; passer-by.com</p>
+					<p>Copyright &copy; <a href="/">passer-by.com</a></p>
 				</div>
 			</footer>
 		</div>
