--- a/about.html
+++ b/about.html
@@ -9,11 +9,20 @@
 		<link rel="shortcut icon" href="public/img/favicon.png">
 		<link rel="canonical" href="http://passser-by.com/index.html">
 		<link rel="stylesheet" href="public/css/commont.css">
-		<style type="text/css">
+		<style>
 			.mod-content{
 				line-height: 20px;
 			}
 		</style>
+		<script>
+			(function(){ //IE低版本兼容
+				var e = ['footer','header','section'], 
+				          i= e.length; 
+				while(i--){ 
+				      document.createElement(e[i]);
+				}
+			})();
+		</script>
 	</head>
 	<body>
 		<div class="wrapper">
