--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="canonical" href="http://passser-by.com/index.html">
 		<link rel="stylesheet" href="public/css/commont.css">
 		<style>
-			.mod-content .group{
+			.mod-content section{
 				margin-bottom: 18px;
 			}
 			.mod-content h3{
@@ -65,20 +65,20 @@
 			<div class="container">
 				<div class="main">
 					<div class="mod-content">
-						<div class="group">
+						<section>
 							<h3>算法</h3>
 							<ul>
 								<li><a href="/finder/" target="_blank">最短寻址</a></li>
 								<li><a href="/calc24/" target="_blank">24点计算</a></li>
 							</ul>
-						</div>
-						<div class="group">
+						</section>
+						<section>
 							<h3>工具</h3>
 							<ul>
 								<li><a href="/useragent/" target="_blank">浏览器及设备判断</a></li>
 							</ul>
-						</div>
-						<div class="group">
+						</section>
+						<section>
 							<h3>组件库<span>[jQuery]</span></h3>
 							<ul>
 								<li>
@@ -94,31 +94,31 @@
 								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
 								<li><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
 							</ul>
-						</div>
-						<div class="group">
+						</section>
+						<section>
 							<h3>组件库<span>[Zepto]</span></h3>
 							<ul>
 								<li><a href="/widget/zepto-slider/" target="_blank">幻灯片</a></li>
 							</ul>
-						</div>
-						<div class="group">
+						</section>
+						<section>
 							<h3>UI库<span>[CSS]</span></h3>
 							<ul>
 								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
 							</ul>
-						</div>
-						<div class="group">
+						</section>
+						<section>
 							<h3>站点</h3>
 							<ul>
 								<li><a href="http://passerby.cn" target="_blank">随机导航网(passerby.cn)</a></li>
 							</ul>
-						</div>
-						<div class="group">
+						</section>
+						<section>
 							<h3>游戏</h3>
 							<ul>
 								<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
 							</ul>
-						</div>
+						</section>
 					</div>
 				</div>
 			</div>
