--- a/about.html
+++ b/about.html
@@ -13,6 +13,13 @@
 			.mod-content{
 				line-height: 20px;
 			}
+			.mod-content section{
+				margin-bottom: 18px;
+			}
+			.mod-content h3{
+				margin-bottom: 5px;
+				font-size: 16px;
+			}
 		</style>
 		<script>
 			(function(){ //IE低版本兼容
@@ -34,7 +41,7 @@
 				<div class="mod-list">
 					<ul>
 						<li><a href="/">项目</a></li>
-						<li class="active"><a href="/about.html">关于我</a></li>
+						<li class="active"><a href="/about.html">关于</a></li>
 						<li><a href="http://github.com/mumuy/" target="_blank">Github</a></li>
 					</ul>
 				</div>
@@ -42,9 +49,16 @@
 			<div class="container">
 				<div class="main">
 					<div class="mod-content">
-						<p>网名：木木阳</p>
-						<p>邮箱：zhenghaole1990@126.com</p>
-						<p>喜欢特立独行，向往简约而不简单的生活，追求以修禅的方式洞察编程……活着就是一种修行！</p>
+						<section>
+							<h3>关于我</h3>
+							<p>网名：木木阳</p>
+							<p>邮箱：zhenghaole1990@126.com</p>
+							<p>喜欢特立独行，向往简约而不简单的生活，追求以修禅的方式洞察编程……活着就是一种修行！</p>
+						</section>
+						<section>
+							<h3>关于网站</h3>
+							<p>passer-by,中文解释:过路人、行人、过客。在茫茫的人海里，我们彼此都在扮演着过客的角色。而我们自身也不过是历史长河中的过客而已……以过客的视角去观察，以平凡的心态去生活，这就是网站名称的由来。</p>
+						</section>
 					</div>
 				</div>
 			</div>
