--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div class="mod-list">
 					<ul>
 						<li class="active"><a href="/">项目</a></li>
-						<li><a href="/about.html">关于我</a></li>
+						<li><a href="/about.html">关于</a></li>
 						<li><a href="http://github.com/mumuy/" target="_blank">Github</a></li>
 					</ul>
 				</div>
@@ -82,7 +82,7 @@
 							<h3>组件库<span>[jQuery]</span></h3>
 							<ul>
 								<li>
-									<a class="hot" href="/widget/jquery-slider/" target="_blank">幻灯片</a>
+									<a class="hot" href="/widget/jquery-slider/" target="_blank">轮播</a>
 									/<a href="/widget/jquery-slider/subject.html" target="_blank">全屏滚动</a>
 								</li>
 								<li><a href="/widget/jquery-tabs/" target="_blank">标签页</a></li>
