--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
-		<title>关于我</title>
+		<title>关于</title>
 		<meta name="description" content="web开发组件化">
 		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
 		<meta name="author" content="木木阳,mumuy" />
