--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<section>
 							<h3>组件库<span>[Zepto]</span></h3>
 							<ul>
-								<li><a href="/widget/zepto-slider/" target="_blank">幻灯片</a></li>
+								<li><a href="/widget/zepto-slider/" target="_blank">轮播</a></li>
 							</ul>
 						</section>
 						<section>
