--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
 								<li><a href="/widget/jquery-range/" target="_blank">滑动条</a></li>
 								<li><a href="/widget/jquery-dialog/" target="_blank">对话框</a></li>
 								<li><a href="/widget/jquery-countdown/" target="_blank">倒计时</a></li>
-								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
 								<li><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
+								<li><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></li>
+								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
 							</ul>
 						</section>
 						<section>
