--- a/about.html
+++ b/about.html
@@ -54,6 +54,7 @@
 							<p>网名：木木阳</p>
 							<p>邮箱：zhenghaole1990@126.com</p>
 							<p>喜欢特立独行，向往简约而不简单的生活，追求以修禅的方式洞察编程……活着就是一种修行！</p>
+							<p>QQ交流群:110827470</p>
 						</section>
 						<section>
 							<h3>关于网站</h3>
