--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 								<li><a href="/widget/jquery-countdown/" target="_blank">倒计时</a></li>
 								<li><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
 								<li><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></li>
+								<li><a href="/widget/jquery-calendar/" target="_blank">日历</a></li>
 								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
 							</ul>
 						</section>
