--- a/about.html
+++ b/about.html
@@ -60,6 +60,9 @@
 							<p>QQ交流群:110827470</p>
 							<p>passer-by,中文解释:过路人、行人、过客。在茫茫的人海里，我们彼此都在扮演着过客的角色。而我们自身也不过是历史长河中的过客而已……以过客的视角去观察，以平凡的心态去生活，这就是网站名称的由来。</p>
 						</section>
+						<section>
+							<div id="uyan_frame"></div>
+						</section>
 					</div>
 				</div>
 			</div>
@@ -68,6 +71,9 @@
 					<p>Copyright &copy; <a href="/">passer-by.com</a></p>
 				</div>
 			</footer>
+			<!-- UY BEGIN -->
+			<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2072544"></script>
+			<!-- UY END -->
 		</div>
 	</body>
 </html>
