--- a/comment.html
+++ b/comment.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
-		<title>关于</title>
+		<title>留言</title>
 		<meta name="description" content="web开发组件化">
 		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
 		<meta name="author" content="木木阳,mumuy" />
@@ -41,8 +41,8 @@
 				<div class="mod-list">
 					<ul>
 						<li><a href="/">项目</a></li>
-						<li class="active"><a href="/about.html">关于</a></li>
-						<li><a href="/comment.html">留言</a></li>
+						<li><a href="/about.html">关于</a></li>
+						<li class="active"><a href="/comment.html">留言</a></li>
 						<li><a href="http://github.com/mumuy/" target="_blank">Github</a></li>
 					</ul>
 				</div>
@@ -51,15 +51,7 @@
 				<div class="main">
 					<div class="mod-content">
 						<section>
-							<h3>关于我</h3>
-							<p>网名：木木阳</p>
-							<p>邮箱：zhenghaole1990@126.com</p>
-							<p>喜欢特立独行，向往简约而不简单的生活，追求以修禅的方式洞察编程……活着就是一种修行！</p>
-						</section>
-						<section>
-							<h3>关于网站</h3>
-							<p>QQ交流群:110827470</p>
-							<p>passer-by,中文解释:过路人、行人、过客。在茫茫的人海里，我们彼此都在扮演着过客的角色。而我们自身也不过是历史长河中的过客而已……以过客的视角去观察，以平凡的心态去生活，这就是网站名称的由来。</p>
+							<div id="uyan_frame"></div>
 						</section>
 					</div>
 				</div>
@@ -69,6 +61,9 @@
 					<p>Copyright &copy; <a href="/">passer-by.com</a></p>
 				</div>
 			</footer>
+			<!-- UY BEGIN -->
+			<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2072544"></script>
+			<!-- UY END -->
 		</div>
 	</body>
 </html>
