--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 								<li><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
 								<li><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></li>
 								<li><a href="/widget/jquery-calendar/" target="_blank">日历</a></li>
+								<li><a href="/widget/jquery-popup/" target="_blank">弹出层</a></li>
 								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
 							</ul>
 						</section>
