--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 								<li><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></li>
 								<li><a href="/widget/jquery-calendar/" target="_blank">日历</a></li>
 								<li><a href="/widget/jquery-popup/" target="_blank">弹出层</a></li>
+								<li><a href="/widget/jquery-suggestion/" target="_blank">搜索建议</a></li>
 								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
 							</ul>
 						</section>
