--- a/about.html
+++ b/about.html
@@ -21,6 +21,9 @@
 				margin-bottom: 5px;
 				font-size: 16px;
 			}
+			.mod-content a:hover{
+				border-bottom: 1px dotted #666;
+			}
 		</style>
 		<script>
 			(function(){ //IE低版本兼容
@@ -61,6 +64,10 @@
 							<h3>关于网站</h3>
 							<p>QQ交流群:110827470</p>
 							<p>passer-by,中文解释:过路人、行人、过客。在茫茫的人海里，我们彼此都在扮演着过客的角色。而我们自身也不过是历史长河中的过客而已……以过客的视角去观察，以平凡的心态去生活，这就是网站名称的由来。</p>
+						</section>
+						<section>
+							<h3>友情链接</h3>
+							<p><a href="http://maxiaoxiang.com" target="_blank">MSS。</a></p>
 						</section>
 					</div>
 				</div>
