--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<header>
 				<div class="mod-head">
 					<h1>Passer-by</h1>
-					<p>一个前端工程师的禅意生活</p>
+					<p>一只程序猿的禅意生活</p>
 				</div>
 				<div class="mod-list">
 					<ul>
