--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							</ul>
 						</section>
 						<section>
-							<h3>组件库<span>[jQuery]</span></h3>
+							<h3>jQuery组件库</h3>
 							<ul>
 								<li>
 									<a class="hot" href="/widget/jquery-slider/" target="_blank">轮播</a>
@@ -102,13 +102,13 @@
 							</ul>
 						</section>
 						<section>
-							<h3>组件库<span>[Zepto]</span></h3>
+							<h3>Zepto组件库</h3>
 							<ul>
 								<li><a href="/widget/zepto-slider/" target="_blank">轮播</a></li>
 							</ul>
 						</section>
 						<section>
-							<h3>UI库<span>[CSS]</span></h3>
+							<h3>UI库</h3>
 							<ul>
 								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
 							</ul>
@@ -116,7 +116,7 @@
 						<section>
 							<h3>站点</h3>
 							<ul>
-								<li><a href="http://passerby.cn" target="_blank">随机导航网(passerby.cn)</a></li>
+								<li><a href="http://passerby.cn" target="_blank">随机导航网 [passerby.cn]</a></li>
 							</ul>
 						</section>
 						<section>
